# roptimize

./: Cargo.toml  README.md
src/: affine_expr.rs  constraint.rs  environment.rs  main.rs  model.rs  print_table.rs  simplex.rs  solver.rs  tableau.rs  var.rs
